<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/light_blue"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="234dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/percent_counter"
        android:textAlignment="center"
        android:textColor="@color/text_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/remas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <ImageView
        android:id="@+id/remas"
        android:layout_width="179dp"
        android:layout_height="170dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/corners"
        android:contentDescription="@string/dezute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/editText"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/remas2"
        android:layout_width="169dp"
        android:layout_height="160dp"
        app:cardCornerRadius="30dp"
        android:contentDescription="@string/dezute"
        app:layout_constraintEnd_toEndOf="@id/remas"
        app:layout_constraintStart_toStartOf="@id/remas"
        app:layout_constraintTop_toBottomOf="@id/remas"
        app:layout_constraintBottom_toTopOf="@id/remas">


    <ImageView
        android:id="@+id/paveikslas"
        android:layout_width="179dp"
        android:layout_height="170dp"
        android:src="@drawable/percent"
        android:contentDescription="@string/paveikslas"
        app:layout_constraintBottom_toBottomOf="@+id/remas2"
        app:layout_constraintEnd_toEndOf="@+id/remas2"
        app:layout_constraintStart_toStartOf="@+id/remas2"
        app:layout_constraintTop_toTopOf="@+id/remas2" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editText"
        android:inputType="numberDecimal"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_amount"
        android:autofillHints="@string/enter"
        android:padding="5dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remas"
        app:layout_constraintBottom_toTopOf="@id/seekBar"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layerType="hardware"
        android:progressTint="@color/text_blue"
        android:thumbTint="@color/cursor"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@id/percentProgress"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/percentProgress"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:paddingTop="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:text="@string/percentValue"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/seekBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintBottom_toTopOf="@id/tip"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@id/tip"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:paddingTop="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:text="@string/tip"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percentProgress"
        app:layout_constraintBottom_toTopOf="@id/total"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop= "10dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/total"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="18dp"
        android:paddingTop="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_marginTop= "5dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:textSize="20sp"
        android:hint="@string/result"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toTopOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/kestutis_svetikas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>